--- a/projects/angular2-feedback/package.json
+++ b/projects/angular2-feedback/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular2-feedback",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Feedback widget with selected element screenshot function.",
   "repository": {
     "type": "git",
@@ -9,6 +9,7 @@
   "author": "me",
   "homepage": "https://github.com/AlexOcheretnyi/angular2-feedback-project#readme",
   "license": "MIT",
+  "keywords": ["angular", "angular2-feedback", "feedback-widget", "feedback-screenshot" ],
   "peerDependencies": {
     "@angular/common": "^9.1.9",
     "@angular/core": "^9.1.9",
